# clusterCrit

./: DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac
R/: main.R
inst/benchmark/: Makefile  benchmarkAll.R  benchmarkOne.R
inst/doc/: clusterCrit.R  clusterCrit.Rnw  clusterCrit.bib
inst/unitTests/: Makefile  runOneTest.R
inst/unitTests/data/: testsExternal100.Rdata  testsInternal_400_4.Rdata  testsInternal_500_5.Rdata  testsInternal_600_6.Rdata
inst/unitTests/extCriteria/: runit_all_ext.R  runit_czekanowski_dice.R  runit_folkes_mallows.R  runit_hubert.R  runit_jaccard.R  runit_kulczynski.R  runit_mcnemar.R  runit_phi.R  runit_precision.R  runit_rand.R  runit_recall.R  runit_rogers_tanimoto.R  runit_russel_rao.R  runit_sokal_sneath1.R  runit_sokal_sneath2.R
inst/unitTests/intCriteria/: runit_all_int.R  runit_ball_hall.R  runit_banfeld_raftery.R  runit_c_index.R  runit_calinski_harabasz.R  runit_davies_bouldin.R  runit_det_ratio.R  runit_dunn.R  runit_g_plus.R  runit_gamma.R  runit_gdi11.R  runit_gdi12.R  runit_gdi13.R  runit_gdi21.R  runit_gdi22.R  runit_gdi23.R  runit_gdi31.R  runit_gdi32.R  runit_gdi33.R  runit_gdi41.R  runit_gdi42.R  runit_gdi43.R  runit_gdi51.R  runit_gdi52.R  runit_gdi53.R  runit_ksq_detw.R  runit_log_det_ratio.R  runit_log_ss_ratio.R  runit_mcclain_rao.R  runit_pbm.R  runit_point_biserial.R  runit_ratkowsky_lance.R  runit_ray_turi.R  runit_s_dbw.R  runit_scott_symons.R  runit_sd_dis.R  runit_sd_scat.R  runit_silhouette.R  runit_tau.R  runit_trace_w.R  (+3 more)
inst/unitTests/others/: runit_bestCriterion.R  runit_concordance.R
man/: bestCriterion.Rd  clusterCrit.Rd  concordance.Rd  extCriteria.Rd  getCriteriaNames.Rd  intCriteria.Rd
src/: Makevars.in  Makevars.win  critCalc.f95  critUtils.f95  criteria.c  criteria.h  indices.f95  logFile.f95  matrix.f95  norms.f95  timer.f95
vignettes/: clusterCrit.Rnw
