### ===========================================================================
### File: "configure.ac"
###                        Created: 2010-06-24 08:46:27
###              Last modification: 2012-10-16 13:31:52
### Author: Bernard Desgraupes
### e-mail: <bernard.desgraupes@u-paris10.fr>
### This is part of the R package 'clusterCrit'.
### ===========================================================================
###
### Process this file with autoconf to produce a configure script.
###


AC_PREREQ(2.60)

AC_INIT([clusterCrit],[1.0])


# C support
# ---------
AC_PROG_CC()


# Fortran support
# ---------------
AC_PROG_FC()


# Process the .in files
# ---------------------
AC_CONFIG_FILES(
[ 
src/Makevars
])

AC_OUTPUT


